css/recipes.css
																													/* Base Styles */
* {
	box-sizing: border-box;
}

body,
.main-header {
	font-family: "Trebuchet MS", Helvetica, sans-serif;
	line-height: 1.6;
	color: #3a3a3a;
	margin: 0;
	height: 100%;
}
a {
	display: block;
}
body {
	background-color: #AFD3F0;
}

img {
		width: 100%;
		height: auto;
}
.image img {
	display: block;
	margin-left: auto;
	margin-right: auto;
	width: 50%;
	width: 50%;
	height: 350px;
	border: solid #5D707F 2px;
}
.image {
	position: relative;
	text-align: center;
	color: lightblue;
}
 ul {
  margin: 0;
  padding: 0;
  list-style: none;
  text-align: center;
}
p {
	font-size: .95em;
	margin-bottom: 1.8em;
}
h3,
a {
	color: #093a58;
}
h2 {
	text-align: center;
	background-color: #5D707F;
	color: white;

}
h2,
h3 {
	margin-top: 0;
}
a {
	text-decoration: none;
}
input{
	width: 100%;
	padding: 10px;
	margin-bottom: 10px;
}
.convert {
	padding-left: 20px;
}
																														/* Base Layouts */

.heading {
	text-align: center;
	color: #07004D;
}

.name {
	margin: 0;
}
.main-nav {
	margin-top: 15px;
}
.name a,
.main-nav a {
	text-align: center;
	padding: 10px 15px;
}
.main-nav a {
	font-size: .95em;
	color: rgb(#0094f0);
	text-transform: uppercase;
}
.main-nav a:hover {
	color: #9c3737;
}
.mail {
	margin-top: 70px;
}

/* Layout Containers */

.main-header {
	padding-top: .5em;
	padding-bottom: 20px;
	display: flex;
	flex-direction: row;
	justify-content: space-around;
	
}
.main-nav {
	display: flex;
	flex-direction: row;
}
.col {
	padding-right: 1em;
	padding-left: 1em;
}
.main-footer {
	background: #d9e4ea;
	padding: 2em;
	text-align: center;

}
.grid {
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	grid-template-rows: repeat(2, 1fr);;
	grid-gap: 2rem;
	width: 80%;
	max-width: 1150px;
	margin: 0 auto;

}
																																/* Page Elements */

.logo {
	width: 190px;
}
.headline {
	margin-bottom: 0;
}

																																/* Media Queries */

@media (max-width: 769px) {
	
	.name {
		float: right;
		width: 70%;
		padding-top: 20px;;
	}
	.image img {
		width: 100%;
		height: auto;
	}
	.heading {
		padding-top: 10px;
	}
	.main-nav {
		display: none;
	}

	.main-nav li {
		padding: 20px;
		background-color: white;
		border: solid grey 2px;
	}
	.main-nav a {
		display: list-items;
		width: 100%;
		font-size: 25px;
	}

	.main-nav.toggleCls {
		display: block;
	}

	.hamIcon {
		float: left;
        width: 20%;
	}

	.main-header {
		flex-direction: column;
		align-items: right;
		font-size: 3vw;
	}
	.grid {
		display: flex;
		flex-direction: column;
	}
	.main-footer {
		margin-top: 30px;
		width: auto;
	}	
}

@media(min-width: 770px) {
	h2 {
		border-radius: 10px;
		text-align: center;
	}
	.main-header {
		background-color: white;
	}

	.main-footer {
		display: grid;
		grid-template-rows: 1fr;
			/*position: fixed;
			bottom: 0px;
			left: 0px;
			width: 100%; */
		}
		.hamIcon {
			display: none;
		}
}

